bug 369270 - Add check for latest tzid to GetInTimezone. r1=ctalbert, r2=dmose